backup_individuals/sjeng/use_undefined_identifier/c2/SwitchPromoted
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/SwitchPromoted/src/crazy.c:671:8: error: use of undeclared identifier 'dword_418AA0'
return dword_418AA0[piece]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/SwitchPromoted/src/obj/crazy.o] Error 1
